--- a/src/app/admin/adminheader/adminheader.component.html
+++ b/src/app/admin/adminheader/adminheader.component.html
@@ -3,8 +3,8 @@
     <a class="navbar-brand text-white" >Agent-sync</a>
     <ul class="navbar-nav ml-auto mt-3  mx-5 pl-5" id="logo1"> 
       <li class="nav-item">
-    <a  class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal">
-        <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+    <a  class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal" [routerLink]="['/']" routerLinkActive="active">
+        <i class="fa fa-fw fa-sign-out" ></i>Logout</a>
         
   </li>
 </ul>
