--- a/src/app/client/editprofile/editprofile.component.html
+++ b/src/app/client/editprofile/editprofile.component.html
@@ -5,7 +5,7 @@
        
 <div class="image-upload">
     <label for="file-input">
-       <i class="fa fa-edit custom-edit"></i>
+       <i class="fa fa-edit custom-edit mx-auto"></i>
     </label>
   
     <input id="file-input" type="file" single=true (change)="upload($event)"  name="file-input" accept=".png,.jpg">
