--- a/src/app/client/myaccount/myaccount.component.html
+++ b/src/app/client/myaccount/myaccount.component.html
@@ -33,12 +33,12 @@
           </div>
           <div class="row m-lg-3 m-md-5 my-5">  
             <div class=" col-xd col-6 ">
-                <div class="position-absolute px-3" style="right:0"><div class="circle">11</div></div>
+                <div class="position-absolute px-3" style="right:0"></div>
                 <div class="mx-auto col-lg-8 col-12" (click)="payment()"><img src="/assets/image/icons/acc3.png" class="img-fluid" id="payment info"></div>
           
             </div>
             <div class="col-xd col-6 ">
-              <div class="position-absolute px-3" style="right:0"><div class="circle">1</div></div>
+              <div class="position-absolute px-3" style="right:0"></div>
               <div class="mx-auto col-lg-8 col-12" (click)="editprofile()">
                 <img src="/assets/image/icons/acc4.png" class="img-fluid" id="edit profile-"></div>
           
