--- a/src/app/client/container/container.component.html
+++ b/src/app/client/container/container.component.html
@@ -1,7 +1,7 @@
 <div class="row mb-4">
-  <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class=" offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 example">
       <mat-sidenav-container class="example-container">
-        <mat-sidenav #sidenav [mode]="over" class="bgdark">
+        <mat-sidenav #sidenav [mode]="over" class="bgdark" >
           <div class="col-12 ">
           <img src="../../../assets/image/icons/exit.png" class="img-fluid" >
           <div class="col-10 mx-auto" *ngIf="(profile | async)?.url === empty ; else templateName"><img src='https://firebasestorage.googleapis.com/v0/b/agent-sync-sonderworks.appspot.com/o/userprofile%2Fuser.jpg?alt=media&token=d3b47a22-a861-4c7a-9104-bef874ea39bf'
@@ -25,9 +25,23 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" [routerLink]="['./myorder']" routerLinkActive="active">My Orders</a>
+                  <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                    <div *ngIf="avisosTest | async as aviso">
+                        <ul style="display:none">
+                          <li *ngFor="let aviso of aviso; let i = index">
+                            {{aviso}}
+                          </li>
+                        </ul>
+                        
+                           
+                            <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                          
+                    
+                      </div>
+                </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['./myaccount']" routerLinkActive="active">My Account</a>
+                  <a class="nav-link text-white" [routerLink]="['/main/myaccount/main']" routerLinkActive="active">My Account</a>
                 </li>
                 <li class="nav-item"> 
                   <a class="nav-link text-white" [routerLink]="['./delivery']" routerLinkActive="active">Deliveries</a>
