--- a/src/app/client/dashboard/dashboard.component.css
+++ b/src/app/client/dashboard/dashboard.component.css
@@ -25,3 +25,12 @@
   top:21px;
   margin-left:30px;
 }
+
+@media only screen and (max-width: 600px) {
+  .orderquery{
+    position:absolute;
+    top:10px;
+  margin-left:-31px;
+  }
+  
+}
