--- a/src/app/client/delivery/delivery.component.html
+++ b/src/app/client/delivery/delivery.component.html
@@ -19,7 +19,7 @@
                 <div class="col-md-12">
                     <div class="mt-5 d-flex flex-wrap justify-content-center">
                         <div class="p-2 mx-2 text-center mx-auto" *ngFor="let order of orders | async">
-                          <a (click)="query(order.orderid )" data-toggle="modal" data-target="#myModal"><i class="fa fa-folder" style="font-size:48px"></i> 
+                          <a (click)="query(order.orderid )" data-toggle="modal" data-target="#pendingModel"><i class="fa fa-folder"  aria-hidden="true" style="font-size:48px"></i> 
                           <p class="text-center my-3"  >{{ order.orderid}}</p></a>
                         </div>
                         
@@ -33,7 +33,7 @@
                                 </div>
                                 </div>
 
-                                <div id="myModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                                <div id="pendingModel" class="modal " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" >
                                   <div class="modal-dialog modal-lg" role="document">
                                     <div class="modal-content">
                                         <div class="row p-2">
