--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -35,9 +35,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>{{(property |async)?.orders}}</td>
-        <td>{{(property |async)?.ordersprice}}</td>
+      <tr *ngFor="let prop of (property|async)?.orders; let i = index ">
+        <td>{{(property |async)?.orders[i]}}</td>
+        <td>{{(property |async)?.ordersprice[i]}}</td>
       </tr>
       <tr *ngIf="(property |async)?.Photographyaddons">
         <td>{{(property |async)?.Photographyaddons}}</td>
@@ -51,8 +51,8 @@
     </tbody>
   </table>
   
-<div class="row my-5">
+<!-- <div class="row my-5">
         <div class="offset-md-3 col-md-6 col-xs-12 my-5">
         <button type="button" class="btn btn-lg btn-block my-5" (click)="order()">Download</button>
         </div>
-</div>       
+</div>        -->
