--- a/src/app/client/delivery/delivery.component.html
+++ b/src/app/client/delivery/delivery.component.html
@@ -20,18 +20,18 @@
                     <div class="mt-5 d-flex flex-wrap justify-content-center">
                         <div class="p-2 mx-2 text-center mx-auto" *ngFor="let order of orders | async">
                           <a (click)="query(order.orderid )" data-toggle="modal" data-target="#pendingModel"><i class="fa fa-folder"  aria-hidden="true" style="font-size:48px"></i> 
-                          <p class="text-center my-3"  >{{ order.orderid}}</p></a>
+                          <p class="text-center my-3"  >{{ order.visitingdate.toDate() |date:'M/d'}}</p></a>
                         </div>
                         
                         
                       </div>
-                      <div class="row">
+                      <!-- <div class="row">
                           <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
                             <div class="col-md-12">
                                 <button type="submit" class="btn btn1 btn-block p-3 mt-5" (click)="download()">DOWNLOAD</button>
                                 </div>
                                 </div>
-                                </div>
+                                </div> -->
 
                                 <div id="pendingModel" class="modal " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" >
                                   <div class="modal-dialog modal-lg" role="document">
