--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -64,13 +64,13 @@
 
                         </div>
 
-                        <div class="offset-1 col-5 text-center">
+                        <div class="offset-1 col-5 text-center my-2">
                                 <button type="button" class="btn btn5 btn-block py-2" routerLink="/register">REGISTER
                                         ME</button>
 
 
                         </div>
-                        <div class="col-5 text-center">
+                        <div class="col-5 text-center my-2">
 
 
                                 <button type="button" class="btn btn5 btn-block py-2" routerLink="/forget">FORGOT INFO</button>
