--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -20,7 +20,7 @@
   </div> 
 
 <div class="row "> 
-          <div class="offset-md-3 col-md-6 offset-sm-3 col-sm-6 col-xs-12">
+          <div class="offset-md-3 col-md-6 offset-sm-3 col-sm-6 col-xs-12 align">
             <h3 class="text-center mt-2">How many square feet?{{sqft}}</h3>
             <p class="text-danger">{{message}}</p>
           </div>
