--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="offset-md-2 col-md-8 col-xs-12">
+    <div class="offset-md-2 col-md-8 col-xs-12 align">
       <textarea class="form-control form-rounded" rows="13" name="comment" #comment="ngModel" ngModel placeholder="Please Enter Your Comments"
         required></textarea>
 
