--- a/src/app/client/container/container.component.html
+++ b/src/app/client/container/container.component.html
@@ -3,27 +3,27 @@
       <mat-sidenav-container class="example-container">
         <mat-sidenav #sidenav [mode]="over" class="bgdark" >
           <div class="col-12 ">
-          <img src="../../../assets/image/icons/exit.png" class="img-fluid" >
+          <img src="../../../assets/image/icons/exit.png" class="img-fluid my-3" >
           <div class="col-10 mx-auto" *ngIf="(profile | async)?.url === empty ; else templateName"><img src='https://firebasestorage.googleapis.com/v0/b/agent-sync-sonderworks.appspot.com/o/userprofile%2Fuser.jpg?alt=media&token=d3b47a22-a861-4c7a-9104-bef874ea39bf'
             class="img-thumbnail img-fluid"></div>
             <ng-template  #templateName>
-              <div class="col-10 mx-auto">
+              <div class="col-8 mx-auto my-2">
               <img [src]="(profile | async)?.url" class="img-thumbnail img-fluid">
             </div>
             </ng-template>
           
-            <h5 class="text-white mx-2 my-2">{{(profile | async)?.displayName | titlecase }}</h5>
+            <h5 class="text-white mx-2 my-4">{{(profile | async)?.displayName | titlecase }}</h5>
           
             <nav>
-              <ul class="navbar-nav mx-auto my-2 nav-fill w-100">
-                <li class="nav-item">
+              <ul class="navbar-nav mx-auto my-5 nav-fill w-100">
+                <li class="nav-item my-3">
                   <a class="nav-link text-white" [routerLink]="['./home']" routerLinkActive="active">Main</a>
                 </li>
             
-                <li class="nav-item">
+                <li class="nav-item my-3">
                   <a class="nav-link text-white" [routerLink]="['./order/placeorder']" routerLinkActive="active">Place Order</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item my-3">
                   <a class="nav-link text-white" [routerLink]="['./myorder']" routerLinkActive="active">My Orders</a>
                   <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
                     <div *ngIf="avisosTest | async as aviso">
@@ -40,16 +40,16 @@
                       </div>
                 </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item my-3">
                   <a class="nav-link text-white" [routerLink]="['/main/myaccount/main']" routerLinkActive="active">My Account</a>
                 </li>
-                <li class="nav-item"> 
+                <li class="nav-item my-3"> 
                   <a class="nav-link text-white" [routerLink]="['./delivery']" routerLinkActive="active">Deliveries</a>
                 </li>
-                <li class="nav-item"> 
+                <li class="nav-item my-3"> 
                   <a class="nav-link text-white" [routerLink]="['./profile']" routerLinkActive="active">Profile </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item my-3">
                 
                   <a class="nav-link text-white" [routerLink]="['/']" routerLinkActive="active">Logout</a>
                 </li>
