--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -30,8 +30,8 @@
         <h3 class="text-center my-5">Please choose an available date for this order </h3>
       </div>
 
-    <div class="col-12 py-5 ">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2 px-5">
+      <div  class="offset-lg-4   col-8 py-5 align ">
+        <div class=" mx-auto  my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
