--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -19,12 +19,12 @@
         </div>
         </div>
         <div class="row text-center mb-2">
-          <div class="offset-md-1 col-md-10 col-xs-12 my-4">
+          <div class="offset-md-1 col-md-10 col-xs-12 my-4 align">
             <h3>Great! Now please Pick a time slot that we have available on {{visitingdatenow | date:'MMM d, y'}}</h3>
           </div>
         </div>
     <div class="row">
-      <div class="col-xs-12 my-2 py-md-2 offset-md-2 col-md-8 lg-offset-2 col-lg-8">
+      <div class="col-xs-12 my-2 py-md-2 offset-md-2 col-md-8 lg-offset-2 col-lg-8 align">
           <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatetime(10)">10:00 AM</button>
          <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(11)">11:00 AM</button>
         <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(12)">12:00 PM</button>
