--- a/src/app/client/container/container.component.html
+++ b/src/app/client/container/container.component.html
@@ -51,7 +51,7 @@
                 </li>
                 <li class="nav-item my-3">
                 
-                  <a class="nav-link text-white" [routerLink]="['/']" routerLinkActive="active">Logout</a>
+                  <a class="nav-link text-white" (click)="signout()" routerLinkActive="active">Logout</a>
                 </li>
             
               </ul>
