--- a/src/app/client/register/register.component.html
+++ b/src/app/client/register/register.component.html
@@ -72,7 +72,7 @@
     </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-        <button type="submit" [disabled]="!registerForm.valid" class="btn btninput btn-block mx-auto p-3">REGISTER
+        <button type="submit" [disabled]="!registerForm.valid" class="btn btninput btn-block mx-auto p-3">REGISTER ME
         </button>
       </div>
     </div>
