--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -26,7 +26,7 @@
 </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
-          <button type="button" class="btn btn2 btn-md btn-block">ADD ANOTHER UNIT</button>
-          <button type="button" class="btn btn3 btn-md btn-block">SUBMIT ORDER</button>
+          <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" >ADD ANOTHER UNIT</button>
+          <button type="button" class="btn btn3 btn-md btn-block" [routerLink]="['/main/order/completeorder']" routerLinkActive="router-link-active">SUBMIT ORDER</button>
       </div>
     </div>
