--- a/src/app/client/forget/forget.component.html
+++ b/src/app/client/forget/forget.component.html
@@ -6,13 +6,13 @@
         <h3 class="text-center mt-5">Forgot your login info?</h3>
         <p class="text-center">An email will be sent to the registered address.</p>
     </div>
-    <form class="col-12 mt-5 text-center" (ngSubmit)="forget(forget.value)" #forget="ngForm">
+    <form class="col-12 mt-5 text-center" >
         <div class="row mt-5">
             <div class="offset-md-3 col-md-6 col-xs-12">
-                <input type="email" name="recoveremail" #recoveremail placeholder="Email Address" required class="form-control p-4 mb-5 input-lg numinput text-center">
+                <input type="text" name="recoveremail" #recoveremail placeholder="Email Address"  class="form-control p-4 mb-5 input-lg numinput text-center">
             </div>
             <div class="offset-md-3 col-md-6 col-xs-12 mt-5">
-                <button type="submit" class="btn btn1 btn-block p-3 mt-5">RECOVER LOGIN</button>
+                <button type="submit" class="btn btn1 btn-block p-3 mt-5" (click)="forget(recoveremail.value)">RECOVER LOGIN</button>
             </div>
         </div>
     </form>
