--- a/src/app/admin/admincomplete/admincomplete.component.html
+++ b/src/app/admin/admincomplete/admincomplete.component.html
@@ -247,12 +247,12 @@
 
     
                       </div>
-                      <div class="form-row mt-2">
+                      <!-- <div class="form-row mt-2">
                         <div class="col">
                             <button class="btn btn-primary" type="submit">Confirm</button>
                             <button class="btn btn-danger mx-3">Delete</button>
                       </div>
-                      </div>
+                      </div> -->
                 
                       </form>
                       </div>
