--- a/src/app/admin/adminorder/adminorder.component.html
+++ b/src/app/admin/adminorder/adminorder.component.html
@@ -36,7 +36,7 @@
                           
                          
                          <li class="nav-item">
-                             <a class="nav-link " data-toggle="pill" href="#PENDING">PENDING</a>
+                             <a class="nav-link " data-toggle="pill" href="#PENDING">DELIVERY PENDING</a>
                          </li>
         
                            <li class="nav-item">
