--- a/src/app/admin/adminscheduled/adminscheduled.component.html
+++ b/src/app/admin/adminscheduled/adminscheduled.component.html
@@ -210,8 +210,8 @@
                                 </div>
                                 <div class="form-row mt-2" #elem [attr.id]="(property|async)?.orderid">
                                     <div class="col"  >
-                                        <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Completed</button>
-                                        <button class="btn btn-danger mx-3" (click)="updated(elem.id)">Pending</button>
+                                        <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Photoshoot Completed</button>
+                                        <button class="btn btn-danger mx-3" (click)="updated(elem.id)">Delete</button>
                                   </div>
                                   </div>
                           
