--- a/src/app/client/forget/forget.component.html
+++ b/src/app/client/forget/forget.component.html
@@ -1,6 +1,6 @@
 <div class="row background">
     <div class="col-12 mt-1">
-        <a routerLink="/login"><i class="m-3 fas fa-arrow-left"></i></a>
+        <a routerLink="/login"><i class="m-3 icon fa fa-arrow-left"></i></a>
     </div>
     <div class="col-12">
         <h3 class="text-center mt-5">Forgot your login info?</h3>
