--- a/src/app/client/forget/forget.component.css
+++ b/src/app/client/forget/forget.component.css
@@ -2,6 +2,9 @@
     
   border: 2px solid #434343;
  }
+ .icon{
+   color: #000;
+ }
  .btn1
   {
     color: #fff;
@@ -14,7 +17,7 @@
 }  
 h3
 { 
-  color: #434343;
+  color: #bd8e8e;
   font-size: 2rem;
  
 }
