--- a/src/app/client/myorder/myorder.component.html
+++ b/src/app/client/myorder/myorder.component.html
@@ -35,7 +35,7 @@
                           <div class="col-3 p-2 pt-3">
                             <h2 class="py-1">{{datas.visitingdate.toDate() |date:'M/d'}}</h2>
                           </div>
-                          <div class="col-9">
+                          <div class="col-8 mx-2">
                             <p class="over">{{datas.address.street}}
                               <br>{{datas.address.city}}<br>
                             1 unit | {{datas.visitingdate.toDate() |date:'shortTime'}}</p>
