--- a/src/app/admin/adminpending/adminpending.component.html
+++ b/src/app/admin/adminpending/adminpending.component.html
@@ -43,17 +43,15 @@
               </ng-container>
             <!--Edit/delete-->
       <ng-container matColumnDef="edit/delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit </th>
         <td mat-cell *matCellDef="let order">
+                <br>
           <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#pendingModel" (click)="query(order.orderid)">  
             <i class="fa fa-edit" aria-hidden="true"></i>
         </button>
         
         <br>
-        <button class="btn btn-danger btn-sm my-2 mx-auto"
-         data-toggle="modal" data-target="#pendingModel">
-            <i class="fa fa-trash" aria-hidden="true"></i>
-        </button> 
+         
            </td>
         
       </ng-container>
@@ -68,6 +66,10 @@
   <div id="pendingModel" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
+                <div class="mx-3 py-2">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                     
+                </div>
               <div class="row p-2">
                   <div class="col-4">
                       <p>
@@ -137,7 +139,7 @@
                         </ul>
                         </div>
                         <div class="col-6 float-right mr-auto">
-                        <label for="ordersprice">Price</label>
+                        <label for="ordersprice">Price</label><div class="float-right"> {{ progressBarValue | number: '1.0-0' }}%</div>
                         <ul *ngFor="let propy of (property|async)?.orders; let i = index " #elem [attr.id]="(property|async)?.orderid" class="form-inline mb-2">
                              <li><input type="file" class="btn btn-default" multiple=true (change)=" singleimageupload(propy,$event,elem.id)" name="propy-{{i}}"></li>
                             
