--- a/src/app/client/addonsv/addonsv.component.html
+++ b/src/app/client/addonsv/addonsv.component.html
@@ -25,11 +25,11 @@
   </div>
 </div>
 <div class="row">
-  <div class="offset-md-2 col-md-8 col-xs-12 my-1">
-    <button class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="pushvcs($event, 'Community Shots')">Community Shots(+$50)</button>
-    <button class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight
+  <div class="offset-2 col-8 my-2">
+    <button class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="pushvcs($event, 'Community Shots')">Community Shots(+$50)</button>
+    <button class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight
       Shots(+$50)</button>
-      <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block mb-5" (click)="pushvrf($event, 'Rush Fee')">Rush
+      <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="pushvrf($event, 'Rush Fee')">Rush
         Fee(+$75)</button>
   </div>
 </div>
