--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
               <div class="position-absolute px-3" style="right:0"><div class=""></div></div>
               <div class="mx-auto col-lg-8 col-12" (click)="delivery()"><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
               <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-                <div *ngIf="avisosTest | async as aviso">
+                <div *ngIf="deliverytest | async as aviso">
                     <ul style="display:none">
                       <li *ngFor="let aviso of aviso; let i = index">
                         {{aviso}}
