--- a/src/app/client/login/login.component.css
+++ b/src/app/client/login/login.component.css
@@ -45,23 +45,34 @@ input{
         color: white;
         background-color:#A1A1A1;
         border-radius:25px;
-        font-size: .9rem;
+        font-size: 2rem;
     }    
     
     }
-    @media screen and(max-width:420px){
+    @media screen and (max-width: 420px) and (min-width: 320px){
         .btn5{
            
         font-size:.90rem;
     
         }
+        .size{
+            position: absolute;
+    margin-left: 19rem;
+        }
+    .size1{
+        position: absolute;
+    margin-left: 19rem;
+    margin-top: 3rem;
+    }
     
     }
-     @media screen and(max-width:320px){
+     /* @media screen and(ma-width:320px){
         .btn5{
            
-        font-size:.80rem;
+        font-size:.90rem;
     
         }
+        
     
-    }
+    } */
+   
