--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="row">
         <div class="col-md-4 col-4 text-left">
-          <button type="button" class="btn3 text-white" [routerLink]="['/visitingtime']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
+          <button type="button" class="btn3 text-white" [routerLink]="['/main/order/visitingtime']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
           <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
