--- a/src/app/client/myaccount/myaccount.component.html
+++ b/src/app/client/myaccount/myaccount.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-12">
       <h3 class="text-center text-white">My Account</h3>
 
-      <button type="button" class="btn btn-link text-white" (click)="query()">BACK</button>
+      <button type="button" class="btn btn-link text-white" [routerLink]="['/main/home']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
    
       
      
@@ -23,7 +23,20 @@
             <div class="col-xd col-6 sm-p-2">
               <div class="position-absolute" style="right:0"></div>
               <div class="mx-auto col-lg-8 col-12" (click)="invoice()"><img src="/assets/image/icons/acc1.png" class="img-fluid" id="invoices"></div>
-          
+              <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                <div *ngIf="invoicelist | async as aviso">
+                    <ul style="display:none">
+                      <li *ngFor="let aviso of aviso; let i = index">
+                        {{aviso}}
+                      </li>
+                    </ul>
+                    
+                       
+                        <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                      
+                
+                  </div>
+            </div>
             </div>
             <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
