--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -13,7 +13,7 @@
     <div class="bgdark col-12">
       <div class="row">
         <div class="col-md-4 col-4 text-left">
-          <button type="button" class="btn btn-link text-white" [routerLink]="['/access']" routerLinkActive="router-link-active"
+          <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/access']" routerLinkActive="router-link-active"
             skipLocationChange>BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
