--- a/src/app/client/delivery/delivery.component.html
+++ b/src/app/client/delivery/delivery.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 ">
-            <button class="btn btn-link text-white">BACK</button>
+            <button class="btn btn-link text-white" [routerLink]="['/main/myaccount/main']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
             <button class="btn btn-link float-right text-white ">SELECT</button>
         
           </div>
