--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -6,7 +6,7 @@
     </div>
         <div class="row my-5">
             <div class="col-md-6 col-6 text-left">
-                <button type="button" class="btn3 text-white">BACK</button>
+                <button type="btn btn-link text-white" class="btn3 text-white" [routerLink]="['/main/myaccount/main']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
             </div>
             <div class="col-md-6 col-6 text-right">
                 <button type="button" class="btn3 text-white text-right">SELECT</button>
@@ -49,7 +49,7 @@
       </tr>
       <tr  >
         <td>Total</td>
-        <td>{{(property |async)?.ordersprice[i]+(property |async)?.Photographyaddonsprice+(property |async)?.VideoaddonsPrice}}</td>
+        <td>${{(property |async)?.orderprice}}</td>
       </tr>
     </tbody>
   </table>
