--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-md-4 col-4 text-left">
-        <button type="button" class="btn btn-link text-white" [routerLink]="['/squarefeet']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
+        <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/squarefeet']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
       </div>
       <div class="col-md-4 col-4 text-center">
         <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
