--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -7,7 +7,7 @@
       </div>
           <div class="row">
               <div class="col-md-4 col-4 text-left">
-                  <button type="button" class="btn btn-link text-white" [routerLink]="['/main/comments']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
+                  <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/comments']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
               </div>
               <div class="col-md-4 col-4 text-center">
                   <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
@@ -27,6 +27,6 @@
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
           <button type="button" class="btn btn2 btn-md btn-block" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" >ADD ANOTHER UNIT</button>
-          <button type="button" class="btn btn3 btn-md btn-block" [routerLink]="['/main/order/completeorder']" routerLinkActive="router-link-active">SUBMIT ORDER</button>
+          <button type="button" class="btn btn3 btn-md btn-block" (click)="submit()">SUBMIT ORDER</button>
       </div>
     </div>
