--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <button type="button" class="btn3 text-white" [routerLink]="['/access']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
+              <button type="button" class="btn3 text-white" [routerLink]="['/main/order/visitingdate']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
           </div>
           <div class="col-md-4 col-4 text-center">
               <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
